fixed visibility of nav tabs in mobile

--- a/styles/modules.css
+++ b/styles/modules.css
@@ -6,6 +6,7 @@ h1 {
 
 #tabs li {
   display: none;
+  margin: 0 1em;
 }
 
 header {
@@ -49,6 +50,10 @@ header {
   border: 2px solid black;
 }
 
+a {
+  color: white;
+}
+
 @media screen and (min-width:640px) {
 
   #tabs li {
@@ -57,9 +62,9 @@ header {
     margin: 0 1em;
   }
 
-  a {
+  /*a {
     color: white;
-  }
+  }*/
 
   i {
     visibility: hidden;
